# libserialmodule

./: API-Reference.md  CMakeLists.txt  GUI.md  INSTALL.md  LICENSE.txt  README.md  TEST.md  z.diff
include/: serialmodule.h
src/: CMakeLists.txt  main.c  serialmodule.c  serialmodule.h  simplelog.cfg
src/gtk/: Makefile  build.sh  gtk_app  gtk_app.bk.c  gtk_app.c  xrun.sh
src/linux/: Makefile  simplelog.cfg  z.diff  zgtk.sh  zrun.sh  zstop.sh  ztest.sh
src/mach/: Makefile  simplelog.cfg  test_main  zrun.sh
src/simplelog/: simplelog.c  simplelog.cfg
src/testMFC/testSerialPort/: testSerialPort.sln
src/testMFC/testSerialPort/testSerialPort/: resource.h  testSerialPort.h  testSerialPort.rc  testSerialPort.vcxproj  testSerialPortDlg.cpp  testSerialPortDlg.h
src/testMFC/testSerialPort/testSerialPort/Debug/: testSerialPort.exe.recipe  testSerialPort.ilk  testSerialPort.res  vc143.idb
src/testMFC/testSerialPort/testSerialPort/Debug/testSerialPort.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  testSerialPort.lastbuildstate
src/testMFC/testSerialPort/testSerialPort/res/: testSerialPort.rc2
src/xcode/test_libserialmodule/test_libserialmodule/: main.m
src/xcode/test_libserialmodule/test_libserialmodule.xcodeproj/: project.pbxproj
src/xcode/test_libserialmodule/test_libserialmodule.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/xcode/test_libserialmodule/test_libserialmodule.xcodeproj/project.xcworkspace/xcuserdata/ntthuan.xcuserdatad/: UserInterfaceState.xcuserstate
src/xcode/test_libserialmodule/test_libserialmodule.xcodeproj/xcuserdata/ntthuan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/xcode/test_libserialmodule/test_libserialmodule.xcodeproj/xcuserdata/ntthuan.xcuserdatad/xcschemes/: xcschememanagement.plist
src/xcode/test_libserialmodule/test_libserialmoduleTests/: test_libserialmoduleTests.m
tests/console/: main.c
tests/gtk/: gtk_app.c  gtk_app_pi3.c
tests/testMFC/testSerialPort/testSerialPort/: testSerialPort.cpp  testSerialPort.rc  testSerialPort.vcxproj  testSerialPort.vcxproj.filters  testSerialPortDlg.cpp  testSerialPortDlg.h
tests/xcode/test_libserialmodule/test_libserialmodule/: AppDelegate.h  AppDelegate.m  Info.plist
tests/xcode/test_libserialmodule/test_libserialmodule.xcodeproj/: project.pbxproj
tests/xcode/test_libserialmodule/test_libserialmodule.xcodeproj/xcshareddata/xcschemes/: test_libserialmodule.xcscheme
tests/xcode/test_libserialmodule/test_libserialmodule.xcodeproj/xcuserdata/ntthuan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
tests/xcode/test_libserialmodule/test_libserialmodule/Base.lproj/: MainMenu.xib
tests/xcode/test_libserialmodule/test_libserialmoduleUITests/: test_libserialmoduleUITests.m
